--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ h5,
 h6 {
 	font-family: var(--font-f-heading);
 	font-weight: var(--font-w-bold);
+	margin: 0;
 }
 a {
 	text-decoration: none;
@@ -82,10 +83,13 @@ a {
 	text-align: center;
 }
 .hero__title {
-	color: var(--white);
+	margin: 50px 0 60px;
 	text-transform: uppercase;
+	font-size: 38px;
 	font-weight: var(--font-w-black);
-	font-size: 3em;
+	line-height: 46px;
+	letter-spacing: 8px;
+	color: var(--white);
 }
 
 /*
