--- a/css/styles.css
+++ b/css/styles.css
@@ -308,3 +308,11 @@ a {
 .attribution__link {
 	text-decoration: underline;
 }
+
+@media screen and (min-width: 1440px) {
+	/* Header */
+	.header {
+		min-height: 100vh;
+		background-image: url(../images/desktop/image-header.jpg);
+	}
+}
