--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,11 @@ a {
 		min-height: 100vh;
 		background-image: url(../images/desktop/image-header.jpg);
 	}
+	.hero__title {
+		margin: 80px 0 105px;
+		font-size: 60px;
+		line-height: 1;
+	}
 
 	/*
 	 * Navbar
