fix: Ajustar medidas del about

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ a {
 	color: var(--dark-des-blue);
 }
 .about__text {
-	padding-bottom: 30px;
+	margin-bottom: 30px;
 	line-height: 27px;
 	color: var(--dark-grayish-blue);
 }
@@ -369,18 +369,31 @@ a {
 	.about__body {
 		width: 50%;
 	}
-	.about__row:first-of-type .about__body {
+	.about__row--left .about__body {
 		order: 0;
+		padding-left: 165px;
+		padding-right: 90px;
 	}
-	.about__row:first-of-type .about__img-container {
+	.about__row--left .about__img-container {
 		order: 1;
 	}
 	.about__img {
 		display: block;
 	}
 	.about__body {
-		padding: 150px 145px 0 126px;
+		padding-top: 168px;
 		text-align: left;
+	}
+	.about__row--right .about__body {
+		padding-left: 111px;
+		padding-right: 150px;
+	}
+	.about__title {
+		padding-right: 70px;
+		margin-bottom: 50px;
+	}
+	.about__text {
+		margin-bottom: 50px;
 	}
 
 	/*
