--- a/css/styles.css
+++ b/css/styles.css
@@ -316,7 +316,22 @@ a {
 	text-decoration: underline;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 481px) {
+	/*
+	 * Services
+	 */
+	.services__service {
+		background-position: center;
+	}
+	.services__service--graphic-design {
+		background-image: url(../images/desktop/image-graphic-design.jpg);
+	}
+	.services__service--photography {
+		background-image: url(../images/desktop/image-photography.jpg);
+	}
+}
+
+@media screen and (min-width: 769px) {
 	/*
 	 * Header
 	 */
@@ -326,7 +341,6 @@ a {
 	}
 	.hero__title {
 		margin: 80px 0 105px;
-		font-size: 60px;
 		line-height: 1;
 	}
 
@@ -336,6 +350,62 @@ a {
 	.navbar__logo {
 		font-size: 30px;
 	}
+
+	/*
+	 * About
+	 */
+	.about__body {
+		padding-left: 150px;
+		padding-right: 150px;
+	}
+
+	/*
+	 * Services
+	 */
+	.service__text {
+		padding: 0px 185px;
+		margin-bottom: 66px;
+		font-size: 1rem;
+	}
+
+	/*
+	 * Testimonials
+	 */
+	.testimonials {
+		padding-top: 120px;
+	}
+	.testimonial__text {
+		padding: 0 150px;
+	}
+
+	/*
+	 * Gallery
+	 */
+	.gallery {
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: auto;
+	}
+
+	/*
+	 * Footers
+	 */
+	.footer__links {
+		justify-content: center;
+		gap: 60px;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	/*
+	 * Header
+	 */
+	.hero__title {
+		font-size: 60px;
+	}
+
+	/*
+	 * Navbar
+	 */
 	.navbar__btn {
 		display: none;
 	}
@@ -369,10 +439,14 @@ a {
 	.about__body {
 		width: 50%;
 	}
+	.about__body {
+		padding-top: 80px;
+		text-align: left;
+		padding-right: 50px;
+	}
 	.about__row--left .about__body {
 		order: 0;
-		padding-left: 165px;
-		padding-right: 90px;
+		padding-left: 80px;
 	}
 	.about__row--left .about__img-container {
 		order: 1;
@@ -380,20 +454,8 @@ a {
 	.about__img {
 		display: block;
 	}
-	.about__body {
-		padding-top: 168px;
-		text-align: left;
-	}
 	.about__row--right .about__body {
-		padding-left: 111px;
-		padding-right: 150px;
-	}
-	.about__title {
-		padding-right: 70px;
-		margin-bottom: 50px;
-	}
-	.about__text {
-		margin-bottom: 50px;
+		padding-left: 90px;
 	}
 
 	/*
@@ -405,51 +467,29 @@ a {
 	.services__service {
 		width: 50%;
 	}
-	.services__service--graphic-design {
-		background-image: url(../images/desktop/image-graphic-design.jpg);
-	}
-	.services__service--photography {
-		background-image: url(../images/desktop/image-photography.jpg);
-	}
 	.service__text {
-		padding: 0px 185px;
-		margin-bottom: 66px;
+		padding: 0 60px;
 	}
 
 	/*
 	 * Testimonials
 	 */
-	.testimonials {
-		padding: 166px 0;
-	}
-	.testimonials__title {
-		margin-bottom: 86px;
-	}
 	.testimonials__grid {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: auto;
-		padding: 0 7rem;
-	}
-	.testimonials__testimonial {
-		margin-bottom: 0;
-	}
-	.testimonial__photo {
-		margin-bottom: 68px;
 	}
 	.testimonial__text {
-		margin-bottom: 80px;
+		padding: 0 1rem;
 	}
-	.testimonial__name {
-		margin-bottom: 17px;
-	}
+}
 
+@media screen and (min-width: 1200px) {
 	/*
-	 * Gallery
+	 * Testimoials
 	 */
-	.gallery {
-		grid-template-columns: repeat(4, 1fr);
-		grid-template-rows: auto;
+	.testimonial__text {
+		padding: 0 2rem;
 	}
 
 	/*
@@ -462,11 +502,59 @@ a {
 		margin-bottom: 48px;
 	}
 	.footer__links {
-		justify-content: center;
-		gap: 60px;
 		margin-bottom: 45px;
 	}
 	.footer__icon {
 		margin: 0 14px;
+	}
+}
+
+@media screen and (min-width: 1440px) {
+	/*
+	 * About
+	 */
+	.about__row--left .about__body {
+		padding-left: 165px;
+		padding-right: 90px;
+	}
+	.about__row--right .about__body {
+		padding-left: 111px;
+		padding-right: 150px;
+	}
+	.about__title {
+		padding-right: 70px;
+		margin-bottom: 50px;
+	}
+	.about__body {
+		padding-top: 168px;
+	}
+	.about__text {
+		margin-bottom: 50px;
+	}
+
+	/*
+	 * Testimonials
+	 */
+	.testimonials {
+		padding: 166px 0;
+	}
+	.testimonials__title {
+		margin-bottom: 86px;
+	}
+	.testimonials__grid {
+		padding: 0 7rem;
+	}
+	.testimonials__testimonial {
+		margin-bottom: 0;
+	}
+	.testimonial__photo {
+		margin-bottom: 68px;
+	}
+	.testimonial__text {
+		margin-bottom: 80px;
+		padding: 0 1.25rem;
+	}
+	.testimonial__name {
+		margin-bottom: 17px;
 	}
 }
